# cadinho

./: .editorconfig  .gitignore  .prettierignore  Cargo.toml  README.md  eslint.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json
core/: Cargo.toml
core/src/: lib.rs
core/src/images/: convert.rs  format.rs  mod.rs
core/src/media/: convert.rs  format.rs  mod.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/dependencies/: install.rs  mod.rs  verify.rs
src/app/: layout.tsx  page.tsx
src/app/dialog/: dialog-app.tsx  dialog.facade.tsx
src/app/home/: home.facade.tsx  home.tsx
src/app/home/components/: dependencies.tsx
src/app/settings/: settings-dialog.tsx
src/core/hooks/: use-behavior.ts  use-dependencies.ts  use-observable.ts
src/style/: client-theme-provider.tsx  globals.css
