[package]
name = "cadinho-app"
authors = ["josemoura212@gmail.com"]
license = ""
repository = ""
version.workspace = true
edition.workspace = true

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-log = "2"
serde.workspace = true
anyhow.workspace = true
serde_json = "1.0"
log = "0.4"
cadinho-core = { path = "../core" }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["process", "full"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
